# onetool-mcp

./: .gitignore  404.html  AGENTS.md  AGENTS_PRIME.md  AGENTS_RULES.md  CHANGELOG.md  CLAUDE.md  CNAME  NOTICE.txt  README.md  index.html  justfile  llms.txt  log-audit.csv  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/commands/proj/: doc-sync.md  quick-apply.md  review-py.md
.claude/skills/ot/: SKILL.md
.github/workflows/: docs.yml
_internal/brand/brand/: index.html
_internal/brand/claims/: index.html
_internal/brand/references/: index.html
_internal/brand/release-v1.0.0b1/: index.html
_internal/brand/tool-packs/: index.html
_internal/browse/browser-inspector/: index.html
_internal/browse/ot-browse/: index.html
_internal/browse/page-view/: index.html
_internal/ideas/linkedin-article/: index.html
_internal/ideas/why-onetool-source/: index.html
_internal/ideas/write-ideas/: index.html
_internal/why-onetool/: index.html
about/: index.html
demo/: justfile
demo/.onetool/: ot-bench.yaml  ot-browse.yaml  ot-serve.yaml
demo/.onetool/config/: ot-bench.yaml
demo/bench/: compare.yaml  ecc.yaml  features.yaml  snippets.yaml  tool_brave_search.yaml  tool_code_search.yaml  tool_context7.yaml  tool_convert.yaml  tool_db.yaml  tool_diagram.yaml  tool_excel.yaml  tool_file.yaml  tool_github.yaml  tool_grounding_search.yaml  tool_package.yaml  tool_ripgrep.yaml  tool_web_fetch.yaml
demo/data/: sample_sales.xlsx
demo/prompts/: onetool-in-action.md
demo/src/: demo_tools.py
docs/: features.md  index.md  llms.txt  tool-reference.md
docs/_internal/: why-onetool.md
docs/_internal/brand/: brand.md  claims.md
docs/_internal/browse/: browser-inspector.md  ot-browse.md
docs/_internal/ideas/: why-onetool-source.md
docs/beta/: ot-browse.md  page-view.md
docs/data/: compare.md  result-20260128-0613.csv
docs/extending/: creating-clis.md  creating-tools.md  extensions.md  index.md  logging.md  plugins.md  testing.md
docs/getting-started/: configuration.md  installation.md  security.md
docs/guides/: database-queries.md  explicit-calls.md  prompting-best-practices.md
docs/intro/: index.md  linkedin-article.md  why-onetool-source.md
docs/learn/: configuration.md  database-queries.md  examples.md  installation.md  quickstart.md  security.md
docs/other/: index.md
docs/other/brand/: brand.md  claims.md  feature-summary.md  release-v1.0.0b1.md  tool-packs.md
docs/other/browse/: browser-inspector.md
docs/other/ideas/: why-onetool-source.md  write-ideas.md
docs/reference/cli/: index.md  ot-bench.md  ot-serve.md
docs/reference/tools/: brave-search.md  code-search.md  code.md  context7.md  convert.md  database.md  diagram.md  excel.md  file.md  firecrawl.md  grounding-search.md  index.md  llm.md  ot.md  package.md  page.md  ripgrep.md  scaffold.md  transform.md  web-fetch.md  web.md
docs/stylesheets/: extra.css
examples/: index.html
extending/: index.html
extending/creating-clis/: index.html
extending/creating-tools/: index.html
extending/extensions/: index.html
extending/logging/: index.html
extending/plugins/: index.html
extending/testing/: index.html
features/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/security/: index.html
guides/database-queries/: index.html
guides/explicit-calls/: index.html
guides/prompting-best-practices/: index.html
intro/: index.html
learn/: index.html
learn/comparison/: index.html
learn/configuration/: index.html
learn/database-queries/: index.html
learn/examples/: index.html
learn/explicit-calls/: index.html
learn/installation/: index.html
learn/prompting-best-practices/: index.html
learn/quickstart/: index.html
learn/security/: index.html
licenses/: openspec-LICENSE
openspec/: project.md
openspec/changes/add-ot-help/: proposal.md  tasks.md
openspec/changes/add-output-format-control/: proposal.md  tasks.md
openspec/changes/add-sdk-pack-access/: proposal.md  tasks.md
openspec/specs/: INDEX.md
openspec/specs/_nf-conventions/: spec.md
openspec/specs/_nf-docs/: spec.md
openspec/specs/_nf-observability/: spec.md
openspec/specs/_nf-paths/: spec.md
openspec/specs/_nf-testing/: spec.md
openspec/specs/bench/: spec.md
openspec/specs/bench-config/: spec.md
openspec/specs/bench-csv/: spec.md
openspec/specs/bench-evaluators/: spec.md
openspec/specs/bench-logging/: spec.md
openspec/specs/bench-metrics/: spec.md
openspec/specs/bench-tasks/: spec.md
openspec/specs/bench-tui/: spec.md
openspec/specs/browse/: spec.md
openspec/specs/browse-logging/: spec.md
openspec/specs/docs/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/serve-code-validation/: spec.md
openspec/specs/serve-configuration/: spec.md
openspec/specs/serve-mcp-proxy/: spec.md
openspec/specs/serve-prompts/: spec.md
reference/: index.html
reference/cli/: index.html
reference/tools/: index.html
resources/config/: diagram.yaml  ot-browse.yaml  ot-serve.yaml  prompts.yaml  servers.yaml  snippets.yaml
results/: result-20260119.csv
search/: search_index.json
src/bench/: run.py
src/onetool/: cli.py
src/ot/: __init__.py  _cli.py  _config.py  _tui.py  http_client.py  meta.py  paths.py  prompts.py  server.py  support.py
src/ot_bench/: __init__.py  cli.py  reporter.py  run.py  secrets.py  utils.py
src/ot_browse/: __init__.py  app.py  config.py  inject.js  state.py
src/ot_sdk/: __init__.py  batch.py  cache.py  config.py  deps.py  factory.py  http.py  logging.py  packs.py  paths.py  pyproject.toml  request.py  utils.py  worker.py
src/ot_serve/: cli.py
src/ot_tools/: brave_search.py  code_search.py  context7.py  convert.py  db.py  diagram.py  excel.py  file.py  firecrawl.py  firecrawl_tool.py  grounding_search.py  internal.py  package.py  page_view.py  ripgrep.py  scaffold.py  transform.py  web_fetch.py
stylesheets/: extra.css
tests/: conftest.py
tests/smoke/: test_cli_bench.py  test_cli_browse.py  test_cli_ot_serve.py
(+199 files in other folders)
