[project]
name = "ot_sdk"
version = "1.0.0"
description = "SDK for OneTool external worker tools"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gavin Lasnitzki" }]

dependencies = [
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/beycom/onetool"
Repository = "https://github.com/beycom/onetool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
